# miniscope

./: .env.example  .gitignore  .python-version  LICENSE  Makefile  README.md  main.py  pyproject.toml
.beads/: issues.jsonl  metadata.json
auntie/: .env.example  .gitignore  Makefile  README.md  TELEGRAM_BOT_TESTING_GUIDE.md  pyproject.toml
auntie/.sisyphus/: ralph-loop.local.md  todos.json
auntie/.sisyphus/notepads/: learnings.md
auntie/.sisyphus/notepads/fix-unused-path/import_removal/: learnings.md
auntie/.sisyphus/notepads/telegram-bot/: decisions.md  issues.md  learnings.md  problems.md
auntie/.sisyphus/notepads/telegram-mocking-research/: learnings.md
auntie/.sisyphus/plans/: telegram-bot.md
auntie/auntie/: __init__.py  config.py  main.py
auntie/auntie/config/: __init__.py  settings.py
auntie/auntie/skills/: __init__.py  base.py  demo.py  loader.py
auntie/deployment/: .gitkeep
auntie/tests/: __init__.py
descript/: .env.example  .gitignore  pyproject.toml  pytest.ini
descript/.sisyphus/: ralph-loop.local.md
descript/.sisyphus/evidence/: task1-qa.md  task2-qa.md  task3-qa.md  task4-qa.md  task5-qa.md  task6-qa.md  task7-qa.md  task8-qa.md  task9-qa.md
descript/.sisyphus/notepads/hollywood-script-generator/: decisions.md  issues.md  learnings.md
descript/.sisyphus/plans/: hollywood-script-generator.md
descript/src/hollywood_script_generator/: main.py
descript/src/hollywood_script_generator/api/: __init__.py  job_router.py  routers.py  script_router.py  skip_section_router.py  video_router.py
descript/src/hollywood_script_generator/core/: config.py
descript/src/hollywood_script_generator/db/: __init__.py  alembic.ini  base.py  models.py
descript/src/hollywood_script_generator/db/migrations/: env.py
descript/src/hollywood_script_generator/db/migrations/versions/: 300e57d650d4_initial_schema.py
descript/src/hollywood_script_generator/models/: __init__.py  job_status.py  video_metadata.py
descript/src/hollywood_script_generator/services/: __init__.py  audio_transcriber.py  credits_filter.py  llm_service.py  script_assembler.py  skip_section_manager.py  video_chunker.py
descript/tests/: conftest.py
descript/tests/unit/: test_app.py  test_audio_transcriber.py  test_config.py  test_credits_filter.py  test_db_models.py  test_job_router.py  test_llm_service.py  test_models.py  test_script_assembler.py  test_script_router.py  test_skip_section_manager.py  test_video_chunker.py  test_video_router.py
local/llm-model-ui/backend/app/services/: hf_downloader.py
miniscope/: ai.py  config.py  database.py  main.py  models.py  scraper.py
miniscope/templates/: index.html
miniscope/templates/partials/: card.html  results.html
utils/: debug_image_analysis.py  debug_search.py  fetch_missing_images.py  fix_archer_hallucinations.py  fix_hallucinations.py  reanalyze_all.py  refresh_placeholders.py  rename_images_with_id.py  rescrape_data.py  test_ai.py
