[project]
name = "miniscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "ollama>=0.3.3",
    "scrapy>=2.13.4",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.67.1",
]

